[workspace]
resolver = "2"
members = [
    "axum-cgi",
    "axum-cgi-server",
    "hyper-reverse-proxy",
    "josh-core",
    "josh-cli",
    "josh-filter",
    "josh-graphql",
    "josh-link",
    "josh-proxy",
    "josh-rpc",
    "josh-ssh-shell",
    "josh-templates",
    "josh-ui",
    "josh-starlark",
    "josh-cq",
]

[profile.test]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22.1"
defer = "0.2.1"
env_logger = "0.11.5"
log = "0.4.29"
futures = "0.3.31"
gix = { version = "0.78.0", default-features = false }
gix-actor = "^0"
gix-hash = "^0"
gix-object = "0.55.0"
gix-config = "0.51.0"
gix-submodule = "0.25.0"
libc = "0.2.180"
regex = "1.12.3"
rs_tracing = { version = "1.1.0", features = ["rs_tracing"] }
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "0.9.11"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tempfile = "3.24.0"
hex = "0.4.3"

axum-cgi = { path = "axum-cgi" }
hyper-reverse-proxy = { path = "hyper-reverse-proxy" }
josh-filter = { path = "josh-filter" }
josh-core = { path = "josh-core" }
josh-graphql = { path = "josh-graphql" }
josh-link = { path = "josh-link" }
josh-rpc = { path = "josh-rpc" }
josh-starlark = { path = "josh-starlark" }
josh-templates = { path = "josh-templates" }

[workspace.dependencies.git2]
default-features = false
features = ["vendored-libgit2"]
version = "0.20.4"

[workspace.dependencies.juniper]
version = "0.17.1"
default-features = false
features = ["expose-test-schema"]

[workspace.dependencies.tokio]
version = "1.49.0"
features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "io-std",
    "io-util",
    "net",
    "process",
    "signal",
]

[workspace.dependencies.tokio-util]
version = "0.7.18"
features = ["compat"]

[workspace.dependencies.reqwest]
version = "^0.13"
default-features = false
features = ["blocking", "default-tls", "json"]

[workspace.dependencies.tracing]
version = "0.1.44"
features = ["max_level_trace", "release_max_level_trace"]

[workspace.dependencies.clap]
version = "4.5.57"
features = ["derive", "help", "std", "usage"]
default-features = false

[workspace.dependencies.axum]
version = "^0.8"
features = ["macros"]

[workspace.dependencies.tower]
version = "0.5"
features = ["util"]

[workspace.dependencies.url]
version = "^2"
