[workspace]
resolver = "2"
members = [
    "axum-cgi",
    "axum-cgi-server",
    "hyper-reverse-proxy",
    "josh-core",
    "josh-cli",
    "josh-filter",
    "josh-graphql",
    "josh-link",
    "josh-proxy",
    "josh-rpc",
    "josh-ssh-shell",
    "josh-templates",
    "josh-ui",
    "josh-starlark",
    "josh-cq",
    "josh-changes",

    "forges/josh-github-changes",
    "forges/josh-github-graphql",
    "forges/josh-github-codegen-graphql",
    "forges/josh-github-webhooks",
    "forges/josh-github-auth",
]

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22.1"
defer = "0.2.1"
env_logger = "0.11.9"
log = "0.4.29"
mime = "0.3"
form_urlencoded = "1.2.2"
futures = "0.3.32"
gix = { version = "0.79.0", default-features = false }
gix-actor = "^0"
gix-hash = "^0"
gix-object = "0.56.0"
gix-config = "0.52.0"
gix-submodule = "0.26.0"
libc = "0.2.182"
regex = "1.12.3"
rs_tracing = { version = "1.1.0", features = ["rs_tracing"] }
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "1.0.3"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tempfile = "3.25.0"
hex = "0.4.3"
secret-vault-value = "^1"
hmac = "^0.12"
sha2 = "^0.10"
http = "^1"
chrono = { version = "^0", default-features = false, features = ["serde"] }
dirs = "6"
jsonwebtoken = "9"

proc-macro2 = "^1"
prettyplease = "0.2.37"
graphql_client = "^0.16"
graphql_client_codegen = { version = "^0.16.0" }

axum-cgi = { path = "axum-cgi" }
hyper-reverse-proxy = { path = "hyper-reverse-proxy" }
josh-filter = { path = "josh-filter" }
josh-changes = { path = "josh-changes" }
josh-core = { path = "josh-core" }
josh-graphql = { path = "josh-graphql" }
josh-link = { path = "josh-link" }
josh-rpc = { path = "josh-rpc" }
josh-starlark = { path = "josh-starlark" }
josh-templates = { path = "josh-templates" }

# Forges support
josh-github-changes = { path = "forges/josh-github-changes" }
josh-github-graphql = { path = "forges/josh-github-graphql" }
josh-github-codegen-graphql = { path = "forges/josh-github-codegen-graphql" }
josh-github-webhooks = { path = "forges/josh-github-webhooks" }
josh-github-auth = { path = "forges/josh-github-auth" }

[workspace.dependencies.git2]
default-features = false
features = ["vendored-libgit2"]
version = "0.20.4"

[workspace.dependencies.juniper]
version = "0.17.1"
default-features = false
features = ["expose-test-schema"]

[workspace.dependencies.tokio]
version = "1.49.0"
features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "io-std",
    "io-util",
    "net",
    "process",
    "signal",
]

[workspace.dependencies.tokio-util]
version = "0.7.18"
features = ["compat"]

[workspace.dependencies.reqwest]
version = "^0.13"
default-features = false
features = ["blocking", "default-tls", "json"]

[workspace.dependencies.reqwest-middleware]
version = "^0.5"
features = ["json"]

[workspace.dependencies.tracing]
version = "0.1.44"
features = ["max_level_trace", "release_max_level_trace"]

[workspace.dependencies.clap]
version = "4.5.60"
features = ["derive", "help", "std", "usage"]
default-features = false

[workspace.dependencies.axum]
version = "^0.8"
features = ["macros"]

[workspace.dependencies.tower]
version = "0.5"
features = ["util"]

[workspace.dependencies.url]
version = "^2"
features = ["serde"]

[workspace.dependencies.async-trait]
version = "0.1"
