[package]
name = "axum-cgi-server"
version = "22.10.25"
edition = "2024"
license-file = "../axum-cgi/LICENSE"
repository = "https://github.com/josh-project/josh"

[dependencies]
axum = { workspace = true }
axum-extra = { version = "^0.12", features = ["typed-header"] }
axum-cgi = { path = "../axum-cgi" }
clap = { workspace = true }
http = "1.2.0"
rand = { version = "0.9.2", features = ["std"] }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow.workspace = true
url.workspace = true
