[package]
name = "axum-cgi-server"
version = "22.10.25"
edition = "2024"
license-file = "../axum-cgi/LICENSE"
repository = "https://github.com/josh-project/josh"

[dependencies]
axum-extra = { version = "^0.12", features = ["typed-header"] }
http = "1.4.0"
rand = { version = "0.10.0", features = ["std"] }

axum.workspace = true
axum-cgi.workspace = true
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
anyhow.workspace = true
url.workspace = true
