[package]
name = "axum-cgi"
version = "22.10.25"
edition = "2024"
license-file = "LICENSE"

[dependencies]
bytes = "1.11.0"
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
axum = { workspace = true }
http = "1.2.0"
http-body-util = "0.1.0"
