[package]
name = "axum-cgi"
version = "22.10.25"
edition = "2024"
license-file = "LICENSE"

[dependencies]
bytes = "1.11.1"
http = "1.4.0"
http-body-util = "0.1.0"

futures.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["io"] }
axum.workspace = true
tracing.workspace = true
