[package]
name = "axum-cgi"
version = "26.5.8"
edition = "2024"
license-file = "LICENSE"
description = "CGI handler support for the axum web framework"
repository = "https://github.com/josh-project/josh"

[dependencies]
bytes = "1.11.1"
http = "1.4.0"
http-body-util = "0.1.0"

futures.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["io"] }
axum.workspace = true
tracing.workspace = true
