[package]
name = "hyper_cgi"
version = "22.10.25"
authors = ["Christian Schilling <initcrash@gmail.com>", "Louis-Marie Givel <louis-marie.givel@esrlabs.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Run CGI scripts with hyper"
repository = "https://github.com/josh-project/josh"
readme = "README.md"

[dependencies]
bytes = "1.5.0"
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3" }
http-body = "1.0.0"
http-body-util = "0.1.0"

clap = { version = "4.5.2", optional = true }
base64 = { version = "0.21.7", optional = true }
rand = { version = "0.8.5", optional = true, features = ["std"] }
lazy_static = { version = "1.4.0", optional = true }
hyper-reverse-proxy = { workspace = true }

[lib]
name = "hyper_cgi"
path = "src/hyper_cgi.rs"

[features]
test-server = ["clap", "base64", "lazy_static", "rand"]

[[bin]]
name = "hyper-cgi-test-server"
path = "src/bin/hyper-cgi-test-server.rs"
required-features = ["test-server"]
