[package]
name = "hyper_cgi"
version = "22.10.25"
authors = ["Christian Schilling <initcrash@gmail.com>", "Louis-Marie Givel <louis-marie.givel@esrlabs.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Run CGI scripts with hyper"
repository = "https://github.com/josh-project/josh"
readme = "README.md"

[dependencies]
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
hyper = { version = "0.14.31", features = ["stream", "tcp", "server", "http1"] }

clap = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
rand = { version = "0.8.5", optional = true, features = ["std"] }
lazy_static = { version = "1.5.0", optional = true }
hyper-reverse-proxy = { workspace = true }

[lib]
name = "hyper_cgi"
path = "src/hyper_cgi.rs"

[features]
test-server = ["clap", "base64", "lazy_static", "rand"]

[[bin]]
name = "hyper-cgi-test-server"
path = "src/bin/hyper-cgi-test-server.rs"
required-features = ["test-server"]
