[package]
name = "hyper_cgi"
version = "25.11.26"
edition = "2024"

repository = "https://github.com/josh-project/josh"
authors = ["Christian Schilling <initcrash@gmail.com>", "Louis-Marie Givel <louis-marie.givel@esrlabs.com>"]
license-file = "LICENSE"
description = "Run CGI scripts with hyper"
readme = "README.md"

[dependencies]
bytes = "1.11.0"
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.18" }
http-body = "1.0.0"
http-body-util = "0.1.0"

clap = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
rand = { version = "0.9.2", optional = true, features = ["std"] }
josh-reverse-proxy = { workspace = true }

[lib]
name = "hyper_cgi"
path = "src/hyper_cgi.rs"

[features]
test-server = ["clap", "base64", "rand"]

[[bin]]
name = "hyper-cgi-test-server"
path = "src/bin/hyper-cgi-test-server.rs"
required-features = ["test-server"]
