[package]
name = "josh-changes"
version = "26.4.19"
edition = "2024"
authors = ["Josh Project authors <contact@josh-project.dev>"]
description = "Josh change tracking"
license-file = "../LICENSE"
repository = "https://github.com/josh-project/josh"
keywords = ["git", "monorepo", "workflow", "scm"]

[dependencies]
anyhow.workspace = true
git2.workspace = true

josh-core.workspace = true
