[package]
name = "josh-changes"
version = "26.6.11"
edition = "2024"
authors = ["Josh Project authors <contact@josh-project.dev>"]
description = "Josh change tracking"
license-file = "../LICENSE"
repository = "https://github.com/josh-project/josh"
keywords = ["git", "monorepo", "workflow", "scm"]

[dependencies]
anyhow.workspace = true
git2.workspace = true
serde.workspace = true
serde_json.workspace = true

josh-core.workspace = true
