[package]
authors = ["Josh Project authors <contact@josh-project.dev>"]
description = "Execution runtime trait for josh-compose, with a podman backend"
edition = "2024"
keywords = ["git", "monorepo", "workflow", "scm"]
license-file = "../LICENSE"
name = "josh-compose-runtime"
readme = "../README.md"
repository = "https://github.com/josh-project/josh"
version = "26.7.19"

[dependencies]
anyhow.workspace = true
backon.workspace = true
hex.workspace = true
libc.workspace = true
log.workspace = true
rand.workspace = true

tar = "0.4"
