[package]
name = "josh-core"
version = "22.4.15"
repository = "https://ithub.com/josh-project/josh"
authors = ["Christian Schilling <initcrash@gmail.com>"]
license-file = "LICENSE"
description = "GIT virtualization proxy"
keywords = ["git", "monorepo", "workflow", "scm"]
readme = "../README.md"
edition = "2024"

[[bench]]
name = "ultrawide"
harness = false

[dependencies]
backtrace = "0.3.76"
bitvec = "1.0.1"
git-version = "0.3.9"
glob = "0.3.1"
indoc = "2.0.7"
itertools = "0.14.0"
percent-encoding = "2.3.1"
pest = "2.8.6"
pest_derive = "2.8.6"
rayon = "1.11.0"
strfmt = "0.2.4"
sled = "0.34.7"
rustc-hash = "2.1.1"
smallvec = "1.15.1"

anyhow.workspace = true
git2.workspace = true
gix-actor.workspace = true
gix-object.workspace = true
gix-config.workspace = true
gix-submodule.workspace = true
gix-hash.workspace = true
hex.workspace = true
log.workspace = true
regex.workspace = true
rs_tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
toml.workspace = true

josh-filter.workspace = true
josh-starlark = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.10.0"
criterion2 = { version = "3.0.2" }

[features]
incubating = ["dep:josh-starlark", "josh-filter/incubating"]
