[package]
name = "josh-cq"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
git2.workspace = true
uuid.workspace = true
petgraph = "0.8"
josh-core = { path = "../josh-core" }
josh-link = { path = "../josh-link" }
