[package]
name = "josh-cq"
version = "26.4.19"
edition = "2024"
authors = ["Josh Project authors <contact@josh-project.dev>"]
description = "Code quality tooling for the josh git proxy"
license-file = "../LICENSE"
repository = "https://github.com/josh-project/josh"

[dependencies]
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
git2.workspace = true
axum.workspace = true

josh-core.workspace = true
josh-link.workspace = true
