[package]
name = "josh-graphql"
version = "25.11.26"
edition = "2024"

repository = "https://github.com/josh-project/josh"
authors = ["Christian Schilling <initcrash@gmail.com>"]
license-file = "../LICENSE"
description = "GraphQL API for josh"
readme = "../README.md"

[dependencies]
josh-core = { workspace = true }
juniper = { workspace = true }
git2 = { workspace = true }
rs_tracing = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strfmt = "0.2.4"
toml = { workspace = true }
tracing = { workspace = true }

[dependencies.chrono]
default-features = false
features = ["alloc", "std"]
version = "0.4.42"

[features]
incubating = []
