[package]
name = "josh-graphql"
version = "0.1.0"
edition = "2024"

[dependencies]
strfmt = "0.2.4"

anyhow.workspace = true
juniper.workspace = true
git2.workspace = true
rs_tracing.workspace = true
regex.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
tracing.workspace = true

josh-core.workspace = true

[dependencies.chrono]
default-features = false
features = ["alloc", "std"]
version = "0.4.44"

[features]
incubating = []
