[package]
name = "josh-link"
version = "26.4.5"
edition = "2024"
authors = ["Josh Project authors <contact@josh-project.dev>"]
description = "Josh link resolution"
license-file = "../LICENSE"
repository = "https://github.com/josh-project/josh"
keywords = ["git", "monorepo", "workflow", "scm"]

[dependencies]
git2.workspace = true
anyhow.workspace = true

josh-core.workspace = true

