[package]
name = "josh-memodb"
version = "26.7.19"
repository = "https://ithub.com/josh-project/josh"
authors = ["Josh Project authors <contact@josh-project.dev>"]
license-file = "../LICENSE"
description = "Custom libgit2 object-database backends for josh"
keywords = ["git", "libgit2", "odb"]
readme = "../README.md"
edition = "2024"

[dependencies]
libgit2-sys = "0.18"
git2.workspace = true
log.workspace = true

[dev-dependencies]
tempfile.workspace = true
