[package]
name = "josh-proxy"
version = "25.11.26"
edition = "2024"

repository = "https://github.com/josh-project/josh"
authors = ["Christian Schilling <christian.schilling@esrlabs.com>"]
license-file = "../LICENSE"
description = "GIT virtualization proxy"
readme = "../README.md"
keywords = ["git", "monorepo", "workflow", "scm"]

[dependencies]
sha2 = "0.10.8"
lru = "0.16.2"
hex = { workspace = true }
base64 = { workspace = true }
bytes = "1.11.0"
clap = { workspace = true }
futures = { workspace = true }
hyper = { version = "1.8.1" }
josh-reverse-proxy = { workspace = true }
hyper-staticfile = "0.10.0"
hyper-tls = "0.6.0"
hyper_cgi = { workspace = true }
hyper-util = { version = "0.1.18", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1.0"
indoc = "2.0.7"
josh-core = { workspace = true }
josh-templates = { workspace = true }
josh-graphql = { workspace = true }
percent-encoding = "2.3.1"
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { workspace = true }
url = "2.5.4"
uuid = { version = "1.18.1", features = ["v4"] }
josh-rpc = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
gix = { workspace = true }
juniper = { workspace = true }
git2 = { workspace = true }

opentelemetry = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }

[features]
incubating = []
