[package]
name = "josh-reverse-proxy"
version = "25.11.26"
edition = "2024"

repository = "https://github.com/josh-project/josh"
authors = ["Louis-Marie Givel <louis-marie@givel.fr."]
license-file = "../LICENSE"
description = "Minimal hyper reverse proxy compatibility layer for Josh"
readme = "../README.md"

[dependencies]
bytes = "1.11.0"
http-body-util = "0.1.0"
hyper = { version = "1.8.1", features = ["http1", "client"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.18", features = ["client", "client-legacy", "http1", "tokio"] }
