[package]
name = "josh-review"
version = "0.1.0"
authors = ["Christian Schilling <initcrash@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.17"

[dependencies]
seed = { git = "https://github.com/seed-rs/seed.git"}

serde = { version = "1.0.106", features = ['derive'] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
