[package]
name = "josh-review"
version = "0.1.0"
authors = ["Christian Schilling <initcrash@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.10"

[dependencies]
#seed = { git = "https://github.com/seed-rs/seed.git"}
seed = "*"

serde = { version = "1.0.120", features = ['derive'] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
