[package]
name = "josh-rpc"
version = "25.11.26"
edition = "2024"

repository = "https://github.com/josh-project/josh"
authors = ["Vlad Ivanov <vlad-ivanov-name@users.noreply.github.com>"]
license-file = "../LICENSE"
description = "RPC for josh SSH support"
readme = "../README.md"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
libc = { workspace = true }

[features]
incubating = []
