[package]
name = "josh-rpc"
version = "26.4.19"
edition = "2024"
authors = ["Josh Project authors <contact@josh-project.dev>"]
description = "RPC primitives for the josh git proxy"
license-file = "../LICENSE"
repository = "https://github.com/josh-project/josh"

[dependencies]
serde.workspace = true
tokio.workspace = true
libc.workspace = true

[features]
